--- a/index.html
+++ b/index.html
@@ -62,7 +62,100 @@
   <div class="container">
     <h1>Quiz: Sítios Arqueológicos de Braga</h1>
     <form id="quizForm">
-      <!-- PERGUNTAS AQUI (omitidas por brevidade) -->
+      
+<!-- Termas do Alto da Cividade -->
+<div class="question">
+  <p>1. Qual era a principal função das Termas do Alto da Cividade durante o período romano?</p>
+  <div class="answers">
+    <label><input type="radio" name="q1" value="A"> A) Complexo balnear público</label>
+    <label><input type="radio" name="q1" value="B"> B) Residência de elites</label>
+    <label><input type="radio" name="q1" value="C"> C) Centro religioso</label>
+    <label><input type="radio" name="q1" value="D"> D) Quartel militar</label>
+  </div>
+</div>
+
+<div class="question">
+  <p>2. Em que século se estima que o complexo termal tenha começado a ser utilizado?</p>
+  <div class="answers">
+    <label><input type="radio" name="q2" value="A"> A) Século I d.C.</label>
+    <label><input type="radio" name="q2" value="B"> B) Século I a.C.</label>
+    <label><input type="radio" name="q2" value="C"> C) Século III d.C.</label>
+    <label><input type="radio" name="q2" value="D"> D) Século V d.C.</label>
+  </div>
+</div>
+
+<div class="question">
+  <p>3. Qual destas estruturas NÃO fazia parte das termas romanas típicas, como as da Cividade?</p>
+  <div class="answers">
+    <label><input type="radio" name="q3" value="A"> A) Taberna</label>
+    <label><input type="radio" name="q3" value="B"> B) Caldarium</label>
+    <label><input type="radio" name="q3" value="C"> C) Frigidarium</label>
+    <label><input type="radio" name="q3" value="D"> D) Tepidarium</label>
+  </div>
+</div>
+
+<!-- Domus da Escola Velha da Sé -->
+<div class="question">
+  <p>4. O que é uma “domus” no contexto romano?</p>
+  <div class="answers">
+    <label><input type="radio" name="q4" value="A"> A) Um templo dedicado a Júpiter</label>
+    <label><input type="radio" name="q4" value="B"> B) Uma casa privada urbana</label>
+    <label><input type="radio" name="q4" value="C"> C) Um tipo de muralha defensiva</label>
+    <label><input type="radio" name="q4" value="D"> D) Uma praça pública</label>
+  </div>
+</div>
+
+<div class="question">
+  <p>5. Que elemento decorativo foi identificado na Domus da Escola Velha da Sé, indicando a sofisticação do espaço?</p>
+  <div class="answers">
+    <label><input type="radio" name="q5" value="A"> A) Arcos góticos</label>
+    <label><input type="radio" name="q5" value="B"> B) Colunas dóricas</label>
+    <label><input type="radio" name="q5" value="C"> C) Pavimento em mosaico</label>
+    <label><input type="radio" name="q5" value="D"> D) Tectos pintados</label>
+  </div>
+</div>
+
+<div class="question">
+  <p>6. A Domus da Escola Velha da Sé revela vestígios de ocupação até que período?</p>
+  <div class="answers">
+    <label><input type="radio" name="q6" value="A"> A) Apenas romana</label>
+    <label><input type="radio" name="q6" value="B"> B) Até ao século III d.C.</label>
+    <label><input type="radio" name="q6" value="C"> C) Até à Idade Média</label>
+    <label><input type="radio" name="q6" value="D"> D) Apenas na época medieval</label>
+  </div>
+</div>
+
+<!-- Fonte do Ídolo -->
+<div class="question">
+  <p>7. A Fonte do Ídolo está associada a que tipo de estrutura?</p>
+  <div class="answers">
+    <label><input type="radio" name="q7" value="A"> A) Um santuário rupestre</label>
+    <label><input type="radio" name="q7" value="B"> B) Um aqueduto</label>
+    <label><input type="radio" name="q7" value="C"> C) Um reservatório militar</label>
+    <label><input type="radio" name="q7" value="D"> D) Um poço ritual celta</label>
+  </div>
+</div>
+
+<div class="question">
+  <p>8. Que elementos caracterizam a Fonte do Ídolo?</p>
+  <div class="answers">
+    <label><input type="radio" name="q8" value="A"> A) Pinturas murais</label>
+    <label><input type="radio" name="q8" value="B"> B) Esculturas e inscrições latinas</label>
+    <label><input type="radio" name="q8" value="C"> C) Colunas ornamentais</label>
+    <label><input type="radio" name="q8" value="D"> D) Altar móvel</label>
+  </div>
+</div>
+
+<div class="question">
+  <p>9. A inscrição da Fonte do Ídolo menciona que divindade local?</p>
+  <div class="answers">
+    <label><input type="radio" name="q9" value="A"> A) Júpiter</label>
+    <label><input type="radio" name="q9" value="B"> B) Tongoenabiago</label>
+    <label><input type="radio" name="q9" value="C"> C) Marte</label>
+    <label><input type="radio" name="q9" value="D"> D) Nabia</label>
+  </div>
+</div>
+
     </form>
 
     <div class="buttons">
